# HOS

./: .gitignore  README.md  Sensor Samples
app-sdk/: CMakeLists.txt
app-sdk/common/: CMakeLists.txt  hos_protocol.proto  version.rc.in
app-sdk/common/include/: connector.h
app-sdk/common/src/: connector.cpp
app-sdk/energysaver/: CMakeLists.txt
app-sdk/modules/: CMakeLists.txt
app-sdk/modules/energysaver/: CMakeLists.txt  EnergySaverVersion.cpp.in  README.md  version.rc.in
app-sdk/modules/energysaver/include/: EnergySaverVersion.h
app-sdk/modules/receptionist/: CMakeLists.txt  ReceptionistVersion.cpp.in  version.rc.in
app-sdk/modules/receptionist/include/: ReceptionistVersion.h  job_hostinfo.h  video_capture.h
app-sdk/modules/receptionist/src/: job_hostinfo.cpp  main.cpp
app-sdk/modules/secretary/: CMakeLists.txt
app-sdk/modules/secretary/include/: SecretaryVersion.h
app-sdk/receptionist/: CMakeLists.txt
app-sdk/scripts/: install_dependencies.sh  install_protobuf.sh  install_sodium.sh  install_tbb.sh  install_zmq.sh
app-sdk/secretary/: CMakeLists.txt  SecretaryVersion.cpp.in  version.rc.in
app-sdk/supervisor/: CMakeLists.txt  SuperVisorVersion.cpp.in
app-sdk/supervisor/include/: SuperVisorVersion.h
app-sdk/supervisor/src/: main.cpp
app-sdk/test/: CMakeLists.txt  test_heartbeat.cpp  test_initialize.cpp  test_server.cpp  test_test1.cpp  test_test2.cpp  test_timeout.cpp
app-sdk/utility/: CMakeLists.txt
app-sdk/utility/capture/: CMakeLists.txt
app-sdk/utility/capture/include/: capture_base.h  capture_factory.h  capture_settings.h  capture_utils.h  decoder.h  frame.h  frame_container.h  rtsp_capture_factory.h  utils.h  video_file_capture.h  video_file_capture_factory.h  webcam_capture.h  webcam_capture_factory.h
app-sdk/utility/capture/src/: decoder.cpp  frame.cpp  rtsp_capture.cpp  rtsp_capture_factory.cpp  video_file_capture.cpp  video_file_capture_factory.cpp  webcam_capture.cpp  webcam_capture_factory.cpp
app-sdk/utility/common/: CMakeLists.txt  hos_protocol.proto  version.rc.in
app-sdk/utility/common/include/: async_job_queue.h  client.h  common_macros.h  common_utils.h  connector.h  connector_base.h  envelope.h  hos_protocol.pb.h  job.h  job_context.h  job_init.h  job_ping.h  job_pong.h  macros.h  module_connector.h  module_connector_policy.h  module_status.h  receive_policy_base.h  receive_policy_queue.h  receive_strategy_base.h  receive_strategy_queue.h  serializedobject.h  serializer.h  server.h  server_connector.h  strategy_base.h  strategy_queue.h  utils.h
app-sdk/utility/common/src/: connector.cpp  connector_base.cpp  hos_protocol.pb.cc  job_init.cpp  job_ping.cpp  job_pong.cpp  module_connector.cpp  module_status.cpp  receive_policy_queue.cpp  receive_strategy_queue.cpp  server.cpp  server_connector.cpp  strategy_queue.cpp
bookkeeper/: README.md
drawings/: high-level-design.vsdx
energysaver/: README.md
receptionist/: README.md  face.py
secretary/: README.md
supervisor/: README.md
